5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1716_2499.log
== SUBMITION (2019-05-14 16:13:07) 
-- CODE:
from math import*

cont = 0
var = 0 

k = int(input("N째 Real K: "))

while(cont < k):
	var var +(1/factorial(cont))
	cont = cont + 1
print(round(var , 8))
-- EXECUTION TIME:
0.184533
-- ERROR:
  File "/home/codebench/codes/1716/2499/main.py", line 9
    var var +(1/factorial(cont))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:13:08) 
-- CODE:
from math import*

cont = 0
var = 0 

k = int(input("N째 Real K: "))

while(cont < k):
	var var +(1/factorial(cont))
	cont = cont + 1
print(round(var , 8))
-- ERROR:
File "XXXX", line 9
    var var +(1/factorial(cont))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:13:10) 
-- CODE:
from math import*

cont = 0
var = 0 

k = int(input("N째 Real K: "))

while(cont < k):
	var var +(1/factorial(cont))
	cont = cont + 1
print(round(var , 8))
-- EXECUTION TIME:
0.188229
-- ERROR:
  File "/home/codebench/codes/1716/2499/main.py", line 9
    var var +(1/factorial(cont))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:13:17) 
-- CODE:
from math import*

cont = 0
var = 0 

k = int(input("N째 Real K: "))

while(cont < k):
	var = var +(1/factorial(cont))
	cont = cont + 1
print(round(var , 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:17:23) 
-- CODE:
from math import*

cont = 0
var = 0 

k = int(input("N Real K: "))

while(cont < k):
	var = var +(1/factorial(cont))
	cont = cont + 1
print(round(var , 8))
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:17:29) 
-- CODE:
from math import*

cont = 0
var = 0 

k = int(input("N Real K: "))

while(cont < k):
	var = var +(1/factorial(cont))
	cont = cont + 1
print(round(var , 8))
-- EXECUTION TIME:
0.159849
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
